# odroid-rtsp-rect

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp.example
src/: camera_capture.cpp  camera_capture.h  camere_capture.cpp  main.cpp  rectangle.cpp  rectangle.h  rtsp_server.cpp  rtsp_server.h  stream_encoder.cpp  stream_encoder.h
